--- a/css/styles.css
+++ b/css/styles.css
@@ -145,20 +145,23 @@ text-decoration: none;
 }
 
 .hero-title {
-    font-weight: 900;
-    text-align: center;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.4;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--white-color);
-    margin: 0;
-    margin-bottom: 30px;
+  display: block;
+  padding-top: 200px;
+  font-weight: 900;
+  text-align: center;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin: 0;
+  margin-bottom: 30px;
   }
 
   /* BUTTOM */
   .button {
+    display: block;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.5;
@@ -170,6 +173,8 @@ text-decoration: none;
     margin: 0;
     border: 0;
     border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .button:hover,
