--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,10 @@ body {
   margin: 0;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
 ul {
   padding-left: 0;
   margin: 0;
@@ -158,7 +162,6 @@ text-decoration: none;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-color);
-  margin: 0;
   margin-bottom: 30px;
   }
 
@@ -205,7 +208,6 @@ text-decoration: none;
 
   .skils-com-lict {
     list-style: none;
-    margin: 0;
   }
 
 .com-item-title {
@@ -222,7 +224,6 @@ text-decoration: none;
 .com-item-text {
   line-height: 1.7;
   letter-spacing: 0.03em;
-  margin: 0;
 }
   
 /* Чемы мы занимаемся */
@@ -234,13 +235,11 @@ text-decoration: none;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--h-text-color);
-  margin: 0;
   margin-bottom: 50px;
 }
 
 .work-list {
   list-style: none;
-  margin: 0;
 }
 
 .img-item {
@@ -260,13 +259,11 @@ text-decoration: none;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--h-text-color);
-  margin: 0;
   margin-bottom: 50px;
  }
 
  .team-list {
   list-style: none;
-  margin: 0;
  }
 
  .cart-team {
@@ -353,8 +350,6 @@ background-color: var(--white-color);
   display: block;
   font-style: normal;
   list-style: none;
-  margin: 0;
-  padding-left: 0;
   padding-bottom: 60px;
 }
 
