--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,21 @@
 
 /* BODY */
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 body {
   background-color: var(--white-color);
   color: var(--text-color);
@@ -65,6 +80,10 @@ button {
 }
 
 /* HEADER */
+.header {
+  border-bottom: 1px solid #ececec;
+  background-color: var(--white-color);
+}
 
 .conteiner {
   width: 1200px;
@@ -255,6 +274,7 @@ text-decoration: none;
   letter-spacing: 0.03em;
 }
   
+
 /* Чемы мы занимаемся */
 
 .work-content {
@@ -280,15 +300,17 @@ text-decoration: none;
   margin-left: 30px;
 }
 
+
+
   /* Наша команда */
 
  .team {
     background-color: var(--team-back-color);
  }
 
- .team-content {
+ /* .team-content {
   padding-bottom: 94px;
- }
+ } */
 
  .team-title {
   font-weight: 700;
@@ -338,8 +360,21 @@ background-color: var(--white-color);
 
  /* Страница Портфолио */
 
+.portfolio-conent {
+padding-top: 94px;
+padding-bottom: 94px;
+}
+
+/* кнопки-фильтры портфолио */
 .menu-btn-list {
   list-style: none;
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.menu-btn-list .item + .item {
+  margin-left: 8px;
 }
 
 .filtre {
@@ -347,6 +382,7 @@ background-color: var(--white-color);
   letter-spacing: 0.03em;
   background: var(--team-back-color);
   border-radius: 4px;
+  border: 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -359,13 +395,38 @@ background-color: var(--white-color);
   color: var(--white-color);
 }
 
+
+/* сетка портфолио */
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .portfolio-cart {
   background: var(--white-color);
   list-style: none;
+  flex-basis: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.portfolio-cart:nth-last-child(3n+1) {
+  margin-right: 0;
+}
+
+.portfolio-cart:nth-last-child(-n+3) {
+  margin-bottom: 0;
 }
 
 .cart-link {
   text-decoration: none;
+}
+
+.item-div {
+  border: 1px solid #eeeeee;
+  border-top: none;
+  padding: 20px 24px;
 }
 
 .portfolio-title {
@@ -374,6 +435,7 @@ background-color: var(--white-color);
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--h-text-color);
+  margin-bottom: 4px;
 }
 
 .portfolio-text {
